added support for Debian and fixed templates

--- a/templates/cgi.cfg.erb
+++ b/templates/cgi.cfg.erb
@@ -3,14 +3,14 @@
 # The CGIs will read the main and host config files for any other
 # data they might need.
  
-main_config_file=/etc/nagios/nagios.cfg
+main_config_file=<%= @nagios_cfg %>
  
 # PHYSICAL HTML PATH
 # This is the path where the HTML files for Nagios reside.  This
 # value is used to locate the logo images needed by the statusmap
 # and statuswrl CGIs.
  
-physical_html_path=/usr/share/nagios/html
+physical_html_path=/usr/share/nagios3/html
  
 # URL HTML PATH
 # This is the path portion of the URL that corresponds to the
@@ -20,7 +20,7 @@ physical_html_path=/usr/share/nagios/html
 # http://www.myhost.com/nagios, this value should be '/nagios'
 # (without the quotes).
  
-url_html_path=/nagios
+url_html_path=/nagios3
  
 # CONTEXT-SENSITIVE HELP
 # This option determines whether or not a context-sensitive
